@@ -8,4 +8,5 @@ export(decode)
 export(dotprod)
 export(doubles)
 export(dsrwon)
+export(elim)
 export(plautrans)
