@@ -13,6 +13,7 @@ Changes:
 - plau trans: example modified in documentation of function plautrans 
 - double: utility function
 - dsrwon: Combination of two belief functions
+- elim: Reduction of a relation. This is a new function. Starting from a belief fn on a product space, we choose a variable to remove and calculate the reduced belief function.
 
 DST v0.3: Initial release of package on CRAN (2015-01-13)
 ================
